@@ -1,3 +1,4 @@
+2014-03-19 Added getModules method to Player API
 2014-03-19 Fixed problem with Tex in Video module
 2014-03-19 Added Coloring module
 2014-03-18 Fixed problem with links in page styles.
